Add Users on Page Feature. Add functionality for MenuBar. Add I18N feature. Encapsulate the header into a component

--- a/Week4/web/WEB-INF/templates/menubar.xhtml
+++ b/Week4/web/WEB-INF/templates/menubar.xhtml
@@ -14,10 +14,12 @@
             <ui:composition>
                 <h:form id="menubarId">
                     <p:menubar>
-                        <p:menuitem value="Home" action="goToHomePage">
-                        </p:menuitem>
-                        <p:menuitem value="Students" action="goToStudentsPage"/>
-                        <p:menuitem value="Skills" action="goToSkillsPage"/>
+                        <p:menuitem value="Home" action="goToHomePage" ajax="false"/>
+                        <p:menuitem value="Students" action="goToStudentsPage" ajax="false"/>
+                        <p:menuitem value="Skills" action="goToSkillsPage" ajax="false"/>
+                        <p:menuitem value="Pojects" action="goToProjectsPage" ajax="false"/>
+                        <p:menuitem value="Students Skills" action="goToStudentsSkills" ajax="false"/>
+                        <p:menuitem value="Projects Skills" action="goToProjectsSkills" ajax="false"/>
                         <f:facet name="options">
                             <p:commandButton type="button" value="Logout" icon="ui-icon-extlink"/>
                         </f:facet>
