Updates of previous homework

--- a/Week4/web/WEB-INF/templates/menubar.xhtml
+++ b/Week4/web/WEB-INF/templates/menubar.xhtml
@@ -17,9 +17,10 @@
                         <p:menuitem value="Home" action="goToHomePage" ajax="false"/>
                         <p:menuitem value="Students" action="goToStudentsPage" ajax="false"/>
                         <p:menuitem value="Skills" action="goToSkillsPage" ajax="false"/>
-                        <p:menuitem value="Pojects" action="goToProjectsPage" ajax="false"/>
+                        <p:menuitem value="Projects" action="goToProjectsPage" ajax="false"/>
                         <p:menuitem value="Students Skills" action="goToStudentsSkills" ajax="false"/>
                         <p:menuitem value="Projects Skills" action="goToProjectsSkills" ajax="false"/>
+                        <p:menuitem value="Assignments" action="goToAssignmentsPage" ajax="false"/>
                         <f:facet name="options">
                             <p:commandButton type="button" value="Logout" icon="ui-icon-extlink"/>
                         </f:facet>
